added sort option
